Overall improvements to the hompemage styling. Added a loading slider , still working on it

--- a/archarcades/src/index.css
+++ b/archarcades/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary: #915bff;
-  --secondary: #dfffc9;
+  --secondary: #edf7e7;
   --darkG: #2d3428;
   --tertiary: #B692FF;
   --light: #f4f3f8;
